INCLUDES = -I$(top_srcdir)/bodebug -I$(top_srcdir)/bogl $(all_includes)

noinst_LTLIBRARIES = libbosoncommandframe.la

libbosoncommandframe_la_SOURCES = \
		bosoncommandframe.cpp \
		bosonorderwidget.cpp \
		bosonorderbutton.cpp \
		boactionswidget.cpp \
		bosonunitview.cpp \
		editorunitconfigwidget.cpp

METASOURCES = AUTO

# AB: we will need a message target here?!
