

appsdir = $(kde_appsdir)/Games/TacticStrategy
apps_DATA = boson.desktop bounit.desktop

KDE_ICON = boson

# this is where the XML-GUI resource file goes
rcdir = $(kde_datadir)/boson
rc_DATA = topui.rc bosonbaseui.rc bosonui.rc editorui.rc

rcdir = $(kde_datadir)/borender
rc_DATA = borenderui.rc

EXTRA_DIST = $(apps_DATA)
