noinst_LTLIBRARIES = \
		libbosongameengine.la

INCLUDES = -I$(top_srcdir)/bodebug -I$(top_srcdir)/bogl -I$(top_srcdir)/boson/boufo -I$(top_srcdir)/boson $(all_includes)


libbosongameengine_la_SOURCES = \
		boupgradeableproperty.cpp \
		unitbase.cpp \
		unit.cpp \
		unitproperties.cpp \
		pluginproperties.cpp \
		unitplugins.cpp \
		upgradeproperties.cpp \
		bosonweapon.cpp \
		boitemlist.cpp \
		boitemlisthandler.cpp \
		bosonplayfield.cpp \
		bosonmap.cpp \
		cell.cpp \
		bofile.cpp \
		bpfdescription.cpp \
		bosonfileconverter.cpp \
		bosoncampaign.cpp \
		bosonmessage.cpp \
		boson.cpp \
		bomessage.cpp \
		bosoncanvas.cpp \
		bosoncanvasstatistics.cpp \
		bosoncollisions.cpp \
		bosonnetworksynchronizer.cpp \
		bosonnetworktraffic.cpp \
		speciestheme.cpp \
		player.cpp \
		playerio.cpp \
		bosoncomputerio.cpp \
		bosonpath.cpp \
		bosongamestatistics.cpp \
		bosonstatistics.cpp \
		bogameproperty.cpp \
		bosonpropertyxml.cpp \
		bosonplayerinputhandler.cpp \
		bobincoder.cpp \
		boevent.cpp \
		boeventmatching.cpp \
		boeventlistener.cpp \
		boeventmanager.cpp \
		bocondition.cpp \
		bowater.cpp \
		bosonsaveload.cpp \
		bosongroundtheme.cpp \
		bosongameengine.cpp \
		boquadtreenode.cpp \
		boquadtreecollection.cpp \
		bogroundquadtreenode.cpp \
		bocanvasquadtreenode.cpp \
		bosonitem.cpp \
		bosonshot.cpp \
		bosonitempropertyhandler.cpp


