SUBDIRS = plugin

INCLUDES = -I$(top_srcdir)/bodebug -I$(top_srcdir)/bogl -I$(top_srcdir)/boson/boufo $(all_includes)

noinst_LTLIBRARIES = libbosongameview.la

METASOURCES = AUTO

libbosongameview_la_SOURCES = \
	bosonufogameguihelper.boui \
	bosonufogamegui.cpp \
	bosonufogamewidgets.cpp \
	bosongameview.cpp \
	bosongamevieweventlistener.cpp \
	bosoncanvasrenderer.cpp \
	bosongameviewinputbase.cpp \
	bosongameviewinput.cpp \
	editorviewinput.cpp \
	bosonlocalplayerinput.cpp \
	bosonmenuinput.cpp


