INCLUDES = -I$(top_srcdir)/bodebug $(all_includes)

boson_plugin_LTLIBRARIES = libbogroundrendererplugin.la

libbogroundrendererplugin_la_SOURCES = \
		bogroundrendererfactory.cpp \
		bodefaultgroundrenderer.cpp \
		bofastgroundrenderer.cpp \
		bogroundrendererbase.cpp \
		boquadtreenode.cpp

pluginsdir = $(kde_datadir)/boson/groundrendererplugins
plugins_DATA =

METASOURCES = AUTO

