INCLUDES = -I$(top_srcdir)/bodebug -I$(top_srcdir)/bogl -I$(top_srcdir)/boson -I$(top_builddir)/boson/bosonwidgets -I$(top_srcdir)/boson/boufo $(all_includes)

noinst_LTLIBRARIES = libbosonstartupwidgets.la

libbosonstartupwidgets_la_SOURCES = \
	boufocolorchooser.cpp \
	bosonstartupnetwork.cpp \
	welcomewidget.boui \
	newgamewidget.boui \
	boufonewgamewidget.cpp \
	boufostartupwidget.cpp \
	boufoloadingwidget.cpp \
	boufonetworkoptionswidgetbase.boui \
	boufonetworkoptionswidget.cpp \
	boufostarteditorwidgetbase.boui \
	boufostarteditorwidget.cpp \
	boufoloadsavegamewidget.cpp

METASOURCES = AUTO

# TODO: we have no messages target here
