INCLUDES = $(all_includes)

noinst_LTLIBRARIES = libbosonvisual.la

#libbosonvisual_la_LDFLAGS = $(KDE_RPATH) $(all_libraries)
#libbosonvisual_la_LDADD = -lkdegames -lqtmcop -lsoundserver_idl -lartskde -lGLU -l3ds $(LIB_KDEUI)
libbosonvisual_la_SOURCES = bosonsprite.cpp glsprite.cpp

METASOURCES = AUTO

# AB: we have no messages target here - I guess we don't need it ?!?
